fix overflow issues (ios)

--- a/src/css/winbox.less
+++ b/src/css/winbox.less
@@ -4,7 +4,6 @@
   position: fixed;
   left: 0;
   top: 0;
-  overflow: hidden;
   background: #0050ff;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transition: width 0.2s ease-out, height 0.2s ease-out, transform 0.2s ease-out;
